  * 2012-07-19 fimex-0.38
    * 2x improved output-performance to netcdf3 files
    * support for ocean_s_coordinate_g1 and *_g2
    * adding IndexedData for convenience
    * introducing DataPtr typedef instead of boost::shared_ptr<Data>
    * adding fiConfigOverview.pl script to simplify configuration
  * 2012-07-05 fimex-0.37.4
    * fixing netcdf-files with 0-terminated strings
    * felt: using undefined-values for undefined levels
  * 2012-05-09 fimex-0.37.3
    * enabling build with nc-config and netcdf-4.1.2 to 4.2 without hdf5
    * enabling build with proj-4.8
    * adding latlon projection in gribwriter
    * fixing bug in gribreader with special options
    * enabling name and standard_name selection of variables in grib_writer
    * fixing WRF earth radius
  * 2012-04-11 fimex-0.37.2
    * using towgs84 parameter of CF-1.7-proposal
    * setting felt earth-figure to simple earth
    * allow overruling of felt-earth-figure in config
  * 2012-03-27 fimex-0.37.1
    * adding preliminar WRF output support
  * 2012-03-27 fimex-0.37
    * fix colon-separated variable-indicators for felt
    * fix axes in vector-interpolation (deg2rad)
    * disabling colon delimiter in wdb-sourcestrings
    * performance-improvements/memory reduction in NcmlCDMReader
    * adding de-accumulation processor
    * synchronize default fill-value with netcdf
    * fine-tuning usage of surface-variables from felt
    * allowing to force earth-figure in grib-files
    * template interpolation supports several coordinate systems
    * adding alpha-version of vector to latlon rotation
  * 2012-03-02 fimex-0.36
    * interpolation to simple list of lat/lon values (e.g. multiple profiles)
    * avoid numerical effect in linear interpolation
    * fix race-condition in timeInterpolator
    * fix axes of lambert felt-files
    * update of examples
  * 2012-02-20 fimex-0.35.2
    * allow to read ASIMOF-grib files
    * allow writing grib-data without time